2010-03-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add do-while for `Iget_'; rename.

	* rcsbase.h (Iget): Rename from `Iget_'; add do-while.
	[!large_memory] (cacheget): Use `Iget'.
	* rcslex.c (Lexinit): Likewise.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add do-while for `cachegeteof_'; rename.

	* rcsbase.h (cachegeteof): Rename from `cachegeteof_'; add do-while.
	[large_memory] (cacheget): Use `cachegeteof'.
	* rcsedit.c (copylines, expandline): Likewise.
	* rcsgen.c (putdftext): Likewise.
	* rcslex.c (eoflex): Likewise.
	* rcssyn.c (getdiffcmd): Likewise.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add do-while for `cacheunget_'; rename.

	* rcsbase.h (cacheunget): Rename from `cacheunget_'; add do-while.
	* rcsedit.c (keyreplace): Use `cacheunget'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add do-while for `cacheget_'; rename.

	* rcsbase.h (cacheget): Rename from `cacheget_'; add do-while.
	(cacheunget_, GETC): Use `cacheget'.
	* rcsedit.c (keyreplace): Likewise.
	* rcslex.c (getphrases, printstring): Likewise.
	* rcssyn.c (getdiffcmd): Likewise.
	* rlog.c (getscript): Likewise.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add do-while for `GETC_'; rename to `GET'.

	* rcsbase.h (GETCeof_): Delete unused macro.
	(GETC): Rename from `GETC_'; add do-while.
	* rcsedit.c (copystring): Use `GETC'.
	(enterstring, editstring, expandline): Likewise.
	* rcslex.c (nextlex, getphrases, readstring, savestring): Likewise.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Mark some parameters RCS_UNUSED.

	* rcsfnms.c (rcsreadopen): Mark `mustread' RCS_UNUSED.
	* rcslex.c (nothing_to_deallocate): Likewise for `f'.
	* rcsutil.c (catchsigaction): Likewise for `c'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add check for GCC attribute `unused'.

	* rcsbase.h (RCS_UNUSED): New #define.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Declare `display_version' for rcsutil.c.
